Fix PWA manifest

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <!-- iOS / PWA 用アイコン -->
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     
-    <!-- PWA用マニフェスト -->
-    <link rel="manifest" href="/manifest.webmanifest" />
+    <!-- PWA用マニフェスト
+    <link rel="manifest" href="/manifest.webmanifest" />-->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     
